# TelemetryApp

./: .gitignore  README.md  SHA256SUMS.txt
source/WINAPP/: .gitignore  CMakeLists.txt  LICENSE  README.md  build_scoped_sdk.ps1  vcpkg.json
source/WINAPP/client/: CMakeLists.txt  app_icon.rc  diagnostic_log.cpp  diagnostic_log.h  launcher.cpp  main.cpp  window.cpp  window.h
source/WINAPP/client/config/: app_config.cpp  app_config.h  dashboard_profile.cpp  dashboard_profile.h  metric_catalog_model.cpp  metric_catalog_model.h
source/WINAPP/client/ipc/: pipe_client.cpp  pipe_client.h  shm_reader.cpp  shm_reader.h
source/WINAPP/client/pages/: api_page.cpp  api_page.h  dashboard_page.cpp  dashboard_page.h  fleet_page.cpp  fleet_page.h  metrics_page.cpp  metrics_page.h  settings_page.cpp  settings_page.h
source/WINAPP/client/renderer/: d2d_context.cpp  d2d_context.h  gauge_panel.cpp  gauge_panel.h  panel_layout.cpp  panel_layout.h  waveform_graph.cpp  waveform_graph.h
source/WINAPP/client/ui/: compact_overlay.cpp  compact_overlay.h  gauge_icon.cpp  gauge_icon.h  sidebar.cpp  sidebar.h  system_tray.cpp  system_tray.h
source/WINAPP/client/wrl/: client.h
source/WINAPP/installer/: build_installer.bat  build_portable.bat  installer.nsi  run_nsis.ps1  update.bat
source/WINAPP/service/: CMakeLists.txt  api_key_store.cpp  api_key_store.h  diagnostic_log.cpp  diagnostic_log.h  enterprise_config.cpp  enterprise_config.h  fleet_heartbeat.cpp  fleet_heartbeat.h  hardware_registry.cpp  hardware_registry.h  log_session.cpp  log_session.h  main.cpp  poll_loop.cpp  poll_loop.h  service_control.cpp  service_control.h  validation.cpp  validation.h
source/WINAPP/service/ipc/: http_server.cpp  http_server.h  pipe_server.cpp  pipe_server.h  shm_writer.cpp  shm_writer.h
source/WINAPP/service/process_watcher/: watcher.cpp  watcher.h
source/WINAPP/service/sensors/: adl_minimal.h  cpu.cpp  cpu.h  disk.cpp  disk.h  gpu.cpp  gpu.h  gpu_adl.cpp  gpu_adl.h  gpu_igcl.cpp  gpu_igcl.h  gpu_nvml.cpp  gpu_nvml.h  igcl_minimal.h  memory.cpp  memory.h  network.cpp  network.h  nvml_minimal.h  pdh_queries.cpp  pdh_queries.h  power.cpp  power.h  temperatures.cpp  temperatures.h
source/WINAPP/shared/: api_types.h  app_version.h  metric_ids.h  ring_buffer.h  shm_layout.h
standalone/TelemetryApp_Portable/: API.md  PROJECT_PROXIMITY_MATRIX.md  README.md  WINAPP_FIREWALL_POLICY_AUDIT.md  WINAPP_UI_LAYOUT_HARNESS.md  launch_fleet_manager.bat  launch_local_monitor.bat  launch_sensor.bat  run_service_console.bat
standalone/TelemetryApp_Portable/tools/: validate_release_manifest.ps1
